--- a/Cw1/style.css
+++ b/Cw1/style.css
@@ -25,7 +25,10 @@ header nav {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: left;
+    ol{
+        text-align:left;
+      }
+      
 }
 
 
