--- a/Cw1/style.css
+++ b/Cw1/style.css
@@ -8,6 +8,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: sticky;
 }
 
 header * {
@@ -36,6 +37,15 @@ header nav {
     text-align: center;
     margin-bottom: 10px;
 }
+thead {
+    
+    color: white;
+}
+
+tbody {
+
+    color: white;
+}
 
 footer {
     margin-bottom: 10px;
@@ -47,24 +57,16 @@ footer {
     flex-direction: column;
     width: 50%;
     margin: 0 auto;
+    color: white;
 }
 
-@media screen and (max-width: 600px) {
-    body {
-        font-size: 0.8em;
-        font-family: arial;
-    }
-
-   .info {
-    display: flex;
+ {
+    
     flex-direction: column;
     align-items: center;
     justify-content: center;
    }
 
-img, table {
-    margin: 5px 0;
-}
 
 header {
     font-size: 1em;
@@ -74,6 +76,7 @@ header {
 
 section {
     margin: 10px;
+    color:white
 }
 
 .bottomArticle {
@@ -86,19 +89,27 @@ ol {
 }
 
 .messageForm {
-    width: 80%;
+    width: 40%;
 }
 
     h1 {
-    font-size: 1.5em;
-}
+    font-size: 2.5em;
+   
+}   
 
     h2 {
-    font-size: 1.2em;
+    font-size: 2em;
+    color:white
 }
 
     h3 {
     font-size: 1em;
+    color:white
 }
+
+footer {
+    color: white;
+}
+
 
     
