--- a/cw2/style.css
+++ b/cw2/style.css
@@ -1,44 +1,60 @@
-body {
+body{
     background-color: aquamarine;
-    margin: 0;
-}
-
-.cookies, footer{
-    border:5px solid black;
+    margin:0;
+  }
+  
+  footer,
+  .cookies{
+    border: 5px solid #000;
     text-align: center;
-    padding: 0.5rem;
-    }
-
-    header{
-        border:5px solid black;
-        padding: 0.5rem;  
-
-    }
-    
-    h1{
-        margin:0;
-    }
-    
-    footer {
-    position: fixed;
+    padding:.5rem;
+  }
+  
+  header{
+    border: 5px solid #000;
+    padding:.5rem;
+  }
+  
+  h1{
+    margin:0;
+  }
+  
+  footer{
+    position:fixed;
     bottom:0;
-    width: 100%;
+    width:100%;
     background-color: aquamarine;
-    }
-    
-    *{
-        box-sizing: border-box;
-    }
+  }
+  
+  *{
+    box-sizing: border-box;
+  }
+  
+  section{
+    display:flex;
+    flex-direction: column;
+    margin-bottom:calc( 3rem + 10px );
+  }
+  
+  article{
+    border: 5px solid #000;
+    aspect-ratio: 1/1;
+    margin:1rem;
+    margin-bottom: 0;
+  }
+  
+  @media (min-width:768px){
+  
     section{
-        display: flex;
-        flex-direction: column;
-        margin-bottom:calc(3rem+10px);
+      flex-direction: row;
+      justify-content: center;
+      flex-wrap:wrap;
     }
-
+  
     article{
-        border: 5px solid black;
-        aspect-ratio: 1/1;
-        margin:.1rem;
-        margin-bottom: 0;
-
+      width:35%;
     }
+  
+  }
+ 
+  
