--- a/cw2/style.css
+++ b/cw2/style.css
@@ -41,6 +41,7 @@ body{
     aspect-ratio: 1/1;
     margin:1rem;
     margin-bottom: 0;
+    position: relative
   }
   
   @media (min-width:768px){
@@ -57,4 +58,48 @@ body{
   
   }
  
-  
+  article:nth-child(1) {
+    background-image: url(https://files.worldwildlife.org/wwfcmsprod/images/Lion_WWFGIFTS_cover_2020/magazine_small/2wafu1bmcz_b21fc8e6.jpeg);
+    background-size:cover;
+    background-position: center;
+  }
+
+ 
+  article:nth-child(2) {
+  background-image: url(https://zwierzaki.pl/wp-content/uploads/2021/12/zebra-1200x675.jpg);
+  background-size:cover;
+  background-position: center;
+}
+
+article:nth-child(3) {
+  background-image: url(https://i.pinimg.com/564x/d3/76/6a/d3766ab9e4c88a7b66c1b127c3217229.jpg);
+  background-size:cover;
+  background-position: center;
+
+}
+
+  article:nth-child(4) {
+    background-image: url(https://whatnext.pl/wp-content/uploads/2020/09/zyrafa.jpg);
+    background-size:cover;
+    background-position: center;
+
+  }
+
+  article::after{
+    content: "Kliknij aby zobaczyć zwierzę";
+    background-color: red;
+    position: absolute;
+    width:100%;
+    height:100%;
+    left:0;
+    top:0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: .5s;
+
+  }
+
+  article:active::after {
+  opacity:0;
+}
