--- a/cw3/style.css
+++ b/cw3/style.css
@@ -1,5 +1,9 @@
 body {
     background-color: hsl(30, 38%, 92%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
 
 main {
@@ -32,7 +36,7 @@ h1 {
 p{
     color:hsl(228, 12%, 48%);
     font-family: 'Montserrat', sans-serif;
-    font font-weight: 500;
+    font-weight: 500;
     font-size: .85rem;
     line-height:1.5rem;
 }
@@ -56,7 +60,7 @@ strong{
 s{
     color:hsl(228, 12%, 48%);
     font-family: 'Montserrat', sans-serif;
-    font font-weight: 500;
+    font-weight: 500;
     padding-left:1.5rem;
 }
 
@@ -79,5 +83,15 @@ button{
     position: fixed;
     bottom:0;
     right:0;
-    font size:.7em;
+    font-size:.7em;
+}
+
+@media (min-width 768px){
+    main{
+        display: flex;
+    }
+    header img{
+        max-height:50vh;
+
+    }
 }
