--- a/cw3/style.css
+++ b/cw3/style.css
@@ -1,9 +1,11 @@
+*{box-sizing: border-box;}
 body {
     background-color: hsl(30, 38%, 92%);
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    margin:0;
 }
 
 main {
@@ -77,8 +79,12 @@ button{
     align-items: center;
     justify-content: center;
     gap:.8rem;
+    cursor: pointer;
 }
 
+button:active {
+    background-color:hsl(156, 42%, 18%);
+}
 .attribution{
     position: fixed;
     bottom:0;
@@ -86,12 +92,18 @@ button{
     font-size:.7em;
 }
 
-@media (min-width 768px){
+@media (min-width: 768px){
     main{
-        display: flex;
+        display:flex;   
     }
     header img{
-        max-height:50vh;
-
+        height:450px;
+        width:300px;
+        border-radius: 1rem 0 0 1rem;
+    }
+    main > section{
+        padding:2rem;
+        width:300px;
     }
 }
+
